--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -1064,7 +1064,7 @@
    "id": "99874a2a-d311-4819-a231-37d18b663d30",
    "metadata": {},
    "source": [
-    "Connect to MySQL database"
+    "Connect to MySQL database and load the data"
    ]
   },
   {
